# packaging_project

./: README.md  setup.cfg
$HOME/: .pypirc
